--- a/MetaCom/app/src/main/res/values/strings.xml
+++ b/MetaCom/app/src/main/res/values/strings.xml
@@ -31,9 +31,12 @@
 
     <string name="hello_blank_fragment">hello_blank_fragment</string>
 
-    <!-- Errors -->
+    <!-- API error descriptions -->
     <string name="err_room_taken">Room is already taken</string>
     <string name="err_not_in_chat">You are not in chat</string>
     <string name="err_no_interlocutor">You are the only person in the chat room</string>
     <string name="err_no_such_file">No such file</string>
+
+    <!-- Local error descriptions -->
+    <string name="err_file_load">Could`nt load file</string>
 </resources>
