--- a/MetaCom/app/src/main/res/values/strings.xml
+++ b/MetaCom/app/src/main/res/values/strings.xml
@@ -41,6 +41,8 @@
     <string name="err_not_in_chat">You are not in chat</string>
     <string name="err_no_interlocutor">You are the only person in the chat room</string>
     <string name="err_no_such_file">No such file</string>
+    <string name="err_upload_not_started">Upload not started</string>
+    <string name="err_previous_upload_not_finished">Previous upload not finished</string>
 
     <!-- Local error descriptions -->
     <string name="err_file_load">Could`nt load file</string>
@@ -50,4 +52,5 @@
     <string name="event_chat_leave">Somebody left chat</string>
     <string name="file_path">Your file is saved here: %s</string>
     <string name="download_failed">Download failed</string>
+
 </resources>
