implement file download listener chat fragment

--- a/MetaCom/app/src/main/res/values/strings.xml
+++ b/MetaCom/app/src/main/res/values/strings.xml
@@ -18,6 +18,8 @@
     <string name="upload_code">Your file code is %s</string>
     <string name="take_photo">Take a photo</string>
     <string name="file_explorer">Open file explorer</string>
+    <string name="downloading_error">downloading error</string>
+    <string name="uploading_error">uploading error</string>
 
     <!--Chat Login-->
     <string name="input_chat_name">Input chat name</string>
