--- a/MetaCom/app/src/main/res/values/strings.xml
+++ b/MetaCom/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="uploaded_file">File was sent</string>
     <string name="copied_message">Message was copied</string>
     <string name="connection_lost">Connection was lost</string>
-    <string name="has_interlocutor">Somebody in chat</string>
+    <string name="has_interlocutor">Somebody already in chat</string>
 
     <!--Common-->
     <string name="submit">Submit</string>
