--- a/MetaCom/app/src/main/res/values/strings.xml
+++ b/MetaCom/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="message">Message</string>
     <string name="copy">Copy</string>
     <string name="resend">Resend</string>
+    <string name="rejoin_success">Rejoined successfully</string>
 
     <!--Common-->
     <string name="submit">Submit</string>
