--- a/MetaCom/app/src/main/res/values/strings.xml
+++ b/MetaCom/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="message">Message</string>
     <string name="copy">Copy</string>
     <string name="resend">Resend</string>
+    <string name="send">Send</string>
     <string name="connection_established">Connection established</string>
 
     <!--Common-->
