--- a/MetaCom/app/src/main/res/values/strings.xml
+++ b/MetaCom/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!--Connection Screen-->
     <string name="connection_host">Host</string>
     <string name="connection_port">Port</string>
+    <string name="connect">Connect</string>
     <string name="connection_error">Could\'nt connect to server</string>
 
     <!-- Main screen -->
@@ -26,6 +27,7 @@
     <string name="copied_code">Code was copied</string>
 
     <!--Chat Login-->
+    <string name="join">Join</string>
     <string name="input_chat_name">Chat name</string>
 
     <!--Chat-->
@@ -41,7 +43,6 @@
     <string name="connection_established">Connection established</string>
 
     <!--Common-->
-    <string name="submit">Submit</string>
     <string name="cancel">Cancel</string>
     <string name="download">Download</string>
     <string name="ok">OK</string>
