--- a/MetaCom/app/src/main/res/values/strings.xml
+++ b/MetaCom/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">MetaCom</string>
+    <string name="shared_preferences_host">HOST_LAST_USED</string>
+    <string name="shared_preferences_port">PORT_LAST_USED</string>
+    <string name="shared_preferences_is_authorized">IS_AUTHORIZED</string>
 
     <!--Connection Screen-->
     <string name="connection_host">Host</string>
